# game2048

./: CMakeLists.txt  README.md
headers/: app.h  globals.h  logic.h
source/: globals.c  logic.c
source/app/: app_cleanup.c  app_execute.c  app_init.c  app_input.c  app_loadmedia.c  app_loop.c  app_render.c
